unpackaged/main/default/objects/Base_produit__c/Base_produit__c.object-meta.xml
<CustomObject>
    <label>Base produit</label>
    <nameField>
        <displayFormat>BP-{00000}</displayFormat>
        <label>Numéro de Base produit</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Base produits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>