unpackaged/main/default/objects/Base_produit__c/fields/Catalogue__c.field-meta.xml
<CustomField>
    <fullName>Catalogue__c</fullName>
    <label>Catalogue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>