unpackaged/main/default/objects/Base_produit__c/fields/Modele__c.field-meta.xml
<CustomField>
    <fullName>Modele__c</fullName>
    <label>Modèle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>